<resources>
    <string name="app_name">GB</string>
    <string name="action_settings">Settings</string>
    <string name="p_1_1">
<![CDATA[
 	    	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kristupas buvo mažas šviesiaplaukis berniukas. Jis mėgo žaisti su kamuoliu, karstytis po medžius, bet užvis labiausiai mėgo svajoti ir keliauti. Pati slapčiausia ir didžiausia Kristupo svajonė buvo apkeliauti visą pasaulį ir atrasti neatrastas žemes, kaip tai padarė Kristupas Kolumbas.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Vieno apsilankymo pas senelį metu berniukas papasakojo apie savo svajonę... Senelis išklausė vaikaitį, lėtai nuėjo iki sieninės spintos, atrakino stalčių, išsitraukė mažą, juodą medinę dėžutę...<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tada senelis papasakojo neįtikėtiną istoriją...<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; „Šioje dėželėje yra stebuklingas pinigėlis, kuris mena ne vieną amžių. Jį man perdavė mano senelis, o jam jo senis ir taip toliau. Šis auksinis pinigėlis apkeliavo visą pasaulį, matė daugybę šalių ir kartu su savo saugotojais išgyveno neįtikėtinų nuotykių.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pinigėlis stebuklingas, nes juo galima atsiskaityti visame pasaulyje. Nereikia jokių kitokių pinigų. Be to, jis neįkainojamas, nes už jį galima nupirkti viso pasaulio turtus, jo neatiduodant, tik parodant. Šis auksinis pinigėlis yra slaptas leidimas į stebuklų, pasakų ir nuotykių pasaulį.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Senelis atidarė mažą, juodą medinę dėžutę ir ten suspindo auksinis pinigėlis. Kristupas nedrąsiai jį paėmė ir įsidėjo į vidinę kišenėlę. Taip pat pažadėjo niekam nepasakoti apie šį stebuklingą daiktą<br/>
   ]]>
    </string>
    <string name="p_1_2">
<![CDATA[
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kitą dieną Kristupas paprašė mamos nupirkti jam lagaminą. Ji labai nustebo, tačiau žinodama sūnaus aistrą kelionėms nusprendė nieko neklausinėti ir nusivedė jį į sendaikčių turgų. Ten buvo daugybė keisčiausių daiktų iš viso pasaulio: žibalinė lempa, sena mėlyna kėdė, kuri buvo panaši į karališką sostą, daugybė knygų su keistais rašmenimis, žemėlapiai, šachmatai su iš kaulo pagamintomis figūrėlėmis ir dar daug visko. Vaikštinėdamas po sendaikčių turgų, pas vieną prekeivį Kristupas pamatė mažą, rudą lagaminėlį. Jis buvo iš odos, tačiau labai apsitrynęs, su baltu užrašu, kurio nepavyko perskaityti, o vidus išklotas geltonu aksomu. Kristupui lagaminas patiko. Jis pasakė mamai, kad būtent apie tokį visada ir svajojo.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tačiau pardavėjas nurodė labai aukštą kainą ir nenorėjo nuleisti nė cento. Mama buvo įsitikinusi, kad tokio brangaus daikto nepirks, todėl nuėjo ieškoti toliau. Tada Kristupas prisiminė pinigėlį ir nusprendė išmėginti jo galią... <br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pardavėjas labai nustebo, jis paėmė stebuklingą daiktą, apžiūrėjo iš visų pusių, pakandžiojo dantimis bandydamas įvertinti, ar tikrai auksinis, tada atidavė berniukui ir tarė: „Apie šį nepaprastą pinigėlį man pasakojo mano prosenelis, jis kažkada jį matė pas vieną jauną keliauninką.... Gerai, aš tau padovanosiu šį lagaminėlį, nes koks keliautojas be lagamino, ar ne?“<br/>
	]]>
    </string>
    <string name="p_1_3">
<![CDATA[
	 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kristupas paslėpė pinigėlį kišenėje ir pasiėmęs lagaminėlį nubėgo pas mamą. Jis visą kelią eidamas namo tylėjo, o galvoje sukosi tūkstančiai minčių. Berniukas jau įsivaizdavo, kaip laikydamas šį lagaminėlį vienoje rankoje, o pinigėlį kitoje keliauja per pasaulį ieškodamas nuotykių.  <br/>
    ]]>
    </string>
    <string name="p_1_4">
<![CDATA[
	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tą vakarą berniukas labai nekantravo eiti miegoti. Jis greitai suvalgė manų košę, išgėrė šilto pieno su medumi ir nusiprausęs kojytes atsigulė į lovą. Rudą lagaminą padėjo po ja, o pinigėlį po pagalve ir ėmė laukti. Laukė ilgai, tačiau nieko nevyko. Šiek tiek nusiminė, bet neprarado vilties. Galiausiai miegas nugalėjo ir Kristupas paniro į sapną.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kažin kokia dar niekada nematyta stotis. Iš traukinių veržiasi garai. Labai daug žmonių, o Kristupas stovi perone su mažu rudu lagaminėliu rankoje. Švieslentėse surašyti keisti pavadinimai: Roma, San Franciskas, Paryžius, Oslas ir dar daug kitų, kurių jis net nesugebėjo perskaityti. <br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; „Vadinasi, čia ir prasideda mano kelionė“, – pagalvojo Kristupas ir nuėjo link traukinio, ant kurio buvo parašyta „į Veneciją“.<br/>
    ]]>
    </string>
    <string name="p_2_1">
<![CDATA[
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Traukinys sustojo. Viskas įvyko taip greitai, jog Kristupas net nespėjo suprasti ir
pasidairyti pro langą. Apie Veneciją berniukas buvo girdėjęs iš mamos. Ji pasakojo, kad tai
miestas ant vandens su daugybe kanalų, kuriuose plaukioja maži ir dideli laiveliai, vietiniai
žmonės juos vadino gondolomis.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kristupas priėjo prie vyro puošniu kostiumu ir paprašė jį paplukdyti. Tamsų apsiautą ir
skrybėlę dėvintis vyras nužvelgė berniuką ir pasakė, kad nemokamai jis neplukdo. Kristupas 
neturėjo pinigų...tik mažą auksinę monetą. Todėl nusprendė išmėginti savo laimę.
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Vyriškis labai nustebo pamatęs stebuklingą daiktą, iškarto pakvietė berniuką į valtį ir
papasakojo seną legendą...<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Esą kažkada šis pinigėlis prikausė dviems broliams. Karlas buvo geras kepėjas, o Melnas
labai godus stiklo pūtėjas. Kartą jis pavogė pinigėlį ir pradėjo jį naudoti siekdamas praturtėti. Tai 
užtraukė nelaimę visai Venecijai ir atslinko potvynis. Murano sala buvo užlieta ir pradingo nuo 
žemės paviršiaus. Po mėnesio vanduo atslūgo. Žmonės ėmėsi atstatyti vandens nuniokotą miestą, 
tačiau stiklo pūtėjo Melno ir auksinio pinigėlio niekas nematė.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Baigęs pasakoti legendą vyras priplukdė laivelį prie kranto ir įspėjo Kristupą, kad saugotųsi
piktų žmonių.
 ]]>
    </string>
    <string name="p_2_2">
<![CDATA[
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Berniukas padėkojo vyriškiui su skrybėle ir patraukė link žalio namo, ant kurio puikavosi
iškaba „Skaniausia pica“. Jis jautėsi šiek tiek išalkęs po kelionės, todėl norėjo pasistiprinti. 
Tarpduryje jį pasitiko senas vyriškis, kuris pasiūlė pačiam berniukui išsikepti picą. Kristupas 
labai nustebo, tai buvo pirmas kartas, kai jis pats gamino maistą.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pirmiausia jis sumaišė tešlą ir iškočiojo ploną padą. Senelis atnešė daržovių, sūrio ir 
saliamio. Kristupas ištepė picos paplotį riebalais ir atidžiai dėliojo plonus mėsos griežinėlius. 
Po to sekė pomidorai, bazilikų lapeliai ir sūris. Galiausiai senelis liepė užlenkti picos kraštelius į 
vidų ir pašovė gaminį į krosnį. Iškepusi ji atrodė nuostabiai, todėl Kristupas suskubo valgyti. Dar 
niekada gyvenime jis nebuvo ragavęs tokios skanios picos. <br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Prieš išeidamas berniukas prisipažino kad negali sumokėti, tačiau išsitraukė auksinį 
pinigėlį. Senasis kepėjas apžiūrėjo monetą ir pasakė, kad ji kažkada priklauso jo seneliui Karlui.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dabar Kristupas suprato, kad legenda, kurią pasakojo jį plukdęs vyras buvo gryniausia 
tiesa.
 ]]>
    </string>
    <string name="p_2_3">
<![CDATA[
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Berniukas padėkojo kepėjui už picą ir išėjo. Netikėtai prie jo priėjo puošni dama su kauke
ir pasiūlė aprodyti miestą. Kristupas sutiko. Dama vedė berniuką siauromis gatvelėmis, kurios 
buvo pasislėpusios tarp spalvotų namų eilių. Staiga jie sustojo prie vieno namo. Moteris įstūmė 
Kristupą vidun. Tamsoje berniukas pamatė prie krosnies stovintį piktą vyrą, jis reikalavo atiduoti 
pinigėlį.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kristupas nesutiko. Tada vyras uždarė berniuką rūsyje ir liepė gaminti stiklinius 
kamuoliukus, tol kol persigalvos ir atiduos monetą.<br/>
Kristupas nežinojo, ko griebtis. Jis bandė atidaryti duris – bet veltui, jos buvo sunkios ir 
užrakintos, o langų nebuvo. Jis beldė, šaukė, tačiau viskas veltui. <br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Taigi atsisėdo prie stalo ir pradėjo darbą. Berniukas kruopščiai gamino stiklinius rutuliukus 
ir dėjo juos į šaltą indą su vandeniu, kad atvėstų. Rutuliukai buvo įvairiaspalviai: raudoni, žali, 
geltoni, o žiūrint prieš žvakės liepsną keitė spalvas. Kristupą taip sužavėjo jo kuriami maži 
stebuklai, kad vieną akimirką net pamiršo apie įkalinimą tamsiame rūsyje ir piktą vyrą, kuris 
nori atimti auksinį pinigėlį. Bėgo valandos... staiga Kristupas išgirdo balsą už durų. Tai buvo jį į 
salą atplukdęs vyriškis. Jis greitai atidarė duris ir jie pasileido bėgti iki laivelio. Gondola skrodė 
vandenį, o sala vis tolo. Staiga tolumoje vyriškis pamatė motorinę valtį, joje buvo stiklo pūtėjas. 
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pasiekęs krantą Kristupas bėgo taip greitai, kaip galėjo. Pagaliau – stotis. Berniukas 
uždusęs įšoko į traukinį...<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Kristupas nubudo savo lovelėje. Dar niekada nesapnavo tokio keisto sapno. Pakišo ranką 
po pagalve ir patikrino, ar pinigėlis ten. Taip, jis gulėjo ten pat, kur vakare padėjo. Greitai iššoko 
iš lovos ir išsitraukė lagaminą, atidarė jį ir... jame gulėjo mažas stiklinis rutuliukas, vienas iš tų, 
kuriuos Kristupas pagamino sėdėdamas tamsiame rūsyje.
 ]]>
    </string>
    <string name="p_3_1">
<![CDATA[
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pirmoji Kristupo kelionė buvo kupina nuotykių, o dar tas mažas stiklinis rutuliukas, kuris dabar gulėjo jo lagamine... Jis buvo neišgalvotas, jis buvo tikras. <br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Diena prabėgo nepastebimai. Kristupas gulėjo savo mažoje lovelėje, lagaminas ir pinigėlis buvo savo vietose. Beliko užsimerkti ir panirti į sapną.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Paryžius – toks buvo šios kelionės tikslas. Išlipęs iš traukinio, mažasis keliautojas apsidarė ir pajuto, kad kažkas jį stebi, tačiau būgštauti nebuvo laiko. Prie jo priėjo mergaitė su pintine popierinių gėlių ir mandagiai pasisveikino bei pasiūlė pirkti raudoną rožę. Berniukas labai nustebo.<br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mergaitės vardas buvo Amelija. Ji pasiūlė aprodyti miestą ir netrukus jie jau žingsniavo Eliziejaus laukais, o priekyje matėsi Eifelio bokštas. Priėjus arčiau, Kristupui užgniaužė kvapą, dar niekada jis nebuvo matęs tokios didelės, sudėtingos, bet kartu labai grakščios metalinės konstrukcijos. <br/>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lipti laipteliais jie nesiryžo, juk čia buvo 1 665 pakopos, tačiau pasinaudojo specialiai tam įrengtu liftu. Kristupas pažvelgė žemyn ir pamatė mažas skruzdėlytes, tačiau tai buvo ne skruzdės, o žmonės. Visi automobiliai atrodė kaip spalvotos degtukų dėžutės, o namai – kaip pieno pakeliai.<br/>

   ]]>
    </string>
    <string name="t_1">Auksinis pinigėlis</string>
    <string name="t_2">Spalvoti rutuliukai</string>
    <string name="t_3">Amelija ir kvepalai</string>
    <string name="t_4">Gyvačių kerėtojas</string>
    <string name="t_5">Sana su šydu</string>
</resources>